<?xml version="1.0"?>
<package format="2">
  <name>r3live_tools</name>
  <version>0.0.0</version>
  <description>The r3live_tools package</description>
  <maintainer email="hirofumi01.watanabe@g.softbank.co.jp">h-wata</maintainer>
  <license>Apache 2.0</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/r3live_tools</url> -->
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>livox_camera_calib</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_export_depend>livox_camera_calib</build_export_depend>
  <build_export_depend>livox_ros_driver</build_export_depend>
  <exec_depend>livox_camera_calib</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>image_view</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
